--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Tom Burrows
 tagline:          'A Jekyll theme'
 description:      Computer Science Student at Cambridge University
 url:              https://tpmb.uk
-baseurl:          tpmb.uk/
+#baseurl:          tpmb.uk/
 
 paginate:         5
 
