--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ title:            Tom Burrows
 description:      Computer Science Student at Cambridge University
 url:              https://tpmb.uk
 
+baseurl:          "/music/"
+
 paginate:         5
 
 # Custom vars
