--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title:            Tom Burrows
 description:      Computer Science Student at Cambridge University
 url:              https://tpmb.uk
 
-baseurl:          /music/
+baseurl:          /
 
 paginate:         5
 
